--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -10,7 +10,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w",
-    "build": "cross-env NODE_ENV=production rollup -c ../../../tools/rollup/config.component.build.js",
+    "build":
+      "cross-env NODE_ENV=production rollup -c ../../../tools/rollup/config.component.build.js",
     "build:dev": "rollup -c ../../../tools/rollup/config.component.build.js",
     "prepublishOnly": "npm run build"
   },
@@ -19,7 +20,10 @@
     "@mamba/sprite": "^1.0.0"
   },
   "peerDependencies": {
-    "@mamba/button": "^1.0.0",
-    "@mamba/styles-utils": "^0.0.1"
+    "@mamba/styles-utils": "^0.0.1",
+    "@mamba/native": "^0.0.1"
+  },
+  "dependencies": {
+    "@mamba/icon": "^1.0.0"
   }
 }
