--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "link:packages": "bolt ws exec --only-fs \"packages/**\" -- yarn link",
     "lint": "npm run lint:js; npm run lint:css",
     "lint:js": "eslint \"*.js\" \"{tools,packages,website}/**/*.{js,html,svelte}\"",
-    "lint:css": "stylelint \"packages/**/*.{css,scss,svelte,html}\"",
+    "lint:css": "stylelint \"packages/**/*.{css,pcss,svelte,html}\"",
     "format": "npm run format:css; npm run format:js",
     "format:js": "prettier --loglevel silent --write \"*.js\" \"{tools,packages,website}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages,website}/**/*.{js,html,svelte}\"",
-    "format:css": "prettier --loglevel silent --write \"packages/**/*.{css,scss}\" && stylelint --fix \"packages/**/*.{css,scss}\"",
+    "format:css": "prettier --loglevel silent --write \"packages/**/*.{css,pcss}\" && stylelint --fix \"packages/**/*.{css,pcss}\"",
     "test": "bolt ws test"
   },
   "bolt": {
@@ -46,7 +46,7 @@
       "eslint --fix",
       "git add"
     ],
-    "*.{scss,css}": [
+    "*.{pcss,css}": [
       "prettier --write",
       "stylelint --fix",
       "git add"
@@ -117,15 +117,12 @@
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-formatter-pretty": "^1.0.3",
-    "stylelint-scss": "^3.1.0",
-    "svelte": "^2.7.0",
+    "svelte": "^2.8.0",
+    "svelte-extras": "^2.0.2",
     "svelte-preprocess": "^2.1.3",
     "svelte-routing": "^0.4.2",
     "xml-js": "^1.6.3",
     "yargonaut": "^1.1.2",
     "yargs": "^11.0.0"
-  },
-  "dependencies": {
-    "svelte-extras": "^2.0.2"
   }
 }
