--- a/packages/components/Pos/package.json
+++ b/packages/components/Pos/package.json
@@ -18,7 +18,6 @@
     "@mamba/styles": "^0.0.1"
   },
   "peerDependencies": {
-    "@mamba/native": "^0.0.1",
-    "svelte-routing": "^0.4.2"
+    "@mamba/native": "^0.0.1"
   }
 }
