--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "@babel/preset-env": "^7.0.0-beta.47",
     "@babel/preset-stage-3": "^7.0.0-beta.47",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
-    "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
@@ -90,10 +89,13 @@
     "postcss-cli": "^5.0.1",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend-rule": "^2.0.0",
+    "postcss-html": "^0.30.0",
     "postcss-nested": "^3.0.0",
     "postcss-preset-env": "^5.1.0",
     "postcss-property-lookup": "^2.0.0",
+    "postcss-reporter": "^5.0.0",
     "postcss-scss": "^1.0.6",
+    "postcss-syntax": "^0.30.0",
     "prettier": "^1.12.1",
     "quickenv": "^0.0.5",
     "rimraf": "^2.6.2",
@@ -116,10 +118,9 @@
     "shelljs": "^0.8.2",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^18.2.0",
-    "stylelint-formatter-pretty": "^1.0.3",
     "svelte": "^2.8.0",
     "svelte-extras": "^2.0.2",
-    "svelte-preprocess": "^2.1.3",
+    "svelte-preprocess": "^2.1.4",
     "svelte-routing": "^0.4.2",
     "xml-js": "^1.6.3",
     "yargonaut": "^1.1.2",
