--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "repository": "https://github.com/stone-payments/pos-mamba-web.git",
   "scripts": {
-    "start": "bolt w @mamba/website start",
+    "start": "bolt w @mamba/docssapper start",
     "build": "bolt ws build",
     "build:components": "bolt ws build --only-fs \"packages/components/**\"",
     "build:css": "bolt ws build --only-fs \"packages/css-packs/**\"",
@@ -28,7 +28,8 @@
       "packages/native",
       "packages/css-packs/*",
       "packages/components/*",
-      "website"
+      "website",
+      "docs-sapper"
     ]
   },
   "husky": {
@@ -67,6 +68,7 @@
     "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
     "babel-loader": "^8.0.0-beta",
+    "caniuse-lite": "^1.0.30000856",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
@@ -85,19 +87,24 @@
     "eslint-plugin-standard": "^3.1.0",
     "file-loader": "^1.1.11",
     "globby": "^8.0.1",
+    "html-loader": "^0.5.5",
     "html-minifier": "^3.5.15",
     "husky": "^0.15.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
     "json-loader": "^0.5.7",
     "lint-staged": "^7.1.0",
+    "markdown-loader": "^3.0.0",
     "mini-css-extract-plugin": "^0.4.0",
     "mini-html-webpack-plugin": "^0.2.3",
     "ncp": "^2.0.0",
     "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.3",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "postcss-advanced-variables": "^2.3.3",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^3.1.0",
+    "postcss-easy-import": "^3.0.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
     "postcss-nested": "^3.0.0",
@@ -130,7 +137,7 @@
     "stylelint-config-standard": "^18.2.0",
     "stylelint-formatter-pretty": "^1.0.3",
     "stylelint-scss": "^3.1.0",
-    "stylelint-webpack-plugin": "^0.10.4",
+    "stylelint-webpack-plugin": "^0.10.5",
     "svelte": "^2.6.3",
     "svelte-loader": "^2.9.0",
     "svelte-preprocess": "^2.0.3",
@@ -147,6 +154,18 @@
     "yargs": "^11.0.0"
   },
   "dependencies": {
-    "highlight.js": "^9.12.0"
+    "compression": "^1.7.2",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "golden-fleece": "^1.0.9",
+    "highlight.js": "^9.12.0",
+    "marked": "^0.4.0",
+    "polka": "^0.4.0",
+    "postcss-preset-env": "^5.1.0",
+    "prismjs": "^1.14.0",
+    "sapper": "^0.13.2",
+    "serve-static": "^1.13.2",
+    "sirv": "^0.1.2",
+    "source-code-pro": "^2.30.1"
   }
 }
