--- a/website/package.json
+++ b/website/package.json
@@ -40,18 +40,19 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
     "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "html-minifier": "^3.5.15",
     "husky": "^0.15.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
     "json-loader": "^0.5.7",
     "lint-staged": "^7.1.0",
+    "markdown-loader": "^3.0.0",
     "mini-css-extract-plugin": "^0.4.0",
     "mini-html-webpack-plugin": "^0.2.3",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
     "postcss-browser-reporter": "^0.5.0",
-    "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
     "postcss-nested": "^3.0.0",
@@ -66,7 +67,7 @@
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-scss": "^3.1.0",
-    "stylelint-webpack-plugin": "^0.10.4",
+    "stylelint-webpack-plugin": "^0.10.5",
     "svelte-loader": "^2.9.0",
     "svelte-preprocess": "^2.0.3",
     "url-loader": "^1.0.1",
@@ -78,10 +79,14 @@
     "webpack-simple-progress-plugin": "^0.0.4"
   },
   "dependencies": {
+    "@mamba/code": "^1.0.0",
     "@mamba/core-styles": "^0.0.1",
     "@mamba/dialog": "^1.0.0",
+    "@mamba/icon": "^1.0.0",
     "@mamba/styles-utils": "^0.0.1",
     "highlight.js": "^9.12.0",
+    "marked": "^0.4.0",
+    "prismjs": "^1.14.0",
     "svelte": "^2.6.3",
     "svelte-routing": "^0.4.2"
   }
