--- a/packages/components/Code/package.json
+++ b/packages/components/Code/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mamba/code",
   "version": "1.0.0",
-  "main": "dist/code.js",
+  "main": "src/index.js",
   "style": "dist/style.css",
   "source": "src/index.js",
   "svelte": "src/index.js",
@@ -11,13 +11,9 @@
   ],
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
-  "scripts": {
-    "start": "rollup -c ../../../tools/rollup/config.component.js -w",
-    "build": "cross-env NODE_ENV=production rollup -c ../../../tools/rollup/config.component.js",
-    "build:dev": "rollup -c ../../../tools/rollup/config.component.js",
-    "prepublishOnly": "npm run build"
-  },
-  "devDependencies": {
-    "@mamba/core-styles": "^0.0.1"
+  "scripts": {},
+  "devDependencies": {},
+  "dependencies": {
+    "@mamba/styles-utils": "^0.0.1"
   }
 }
