--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -7,11 +7,11 @@
   "repository": "https://github.com/stone-payments/pos-mamba-web.git",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "npm run build:pos && npm run build:desktop",
+    "build": "yarn build:pos && yarn run build:desktop",
     "build:pos": "postcss ./pos.pcss -o ./dist/pos.css --verbose",
     "build:desktop": "postcss ./desktop.pcss -o ./dist/desktop.css --verbose",
     "postbuild": "ncp src/assets dist/assets",
-    "start": "npm run start:pos",
+    "start": "yarn run start:pos",
     "start:pos": "postcss ./pos.pcss -o ./dist/pos.css -w --verbose",
     "start:desktop": "postcss ./desktop.pcss -o ./dist/desktop.css -w --verbose",
     "test": "exit 0"
