--- a/.eslintignore
+++ b/.eslintignore
@@ -3,3 +3,7 @@ dist/
 /packages/components/*/example/*.js
 /packages/native/*.js
 /packages/utils/*.js
+/docs-sapper/.sapper
+/docs-sapper/app/manifest
+/docs-sapper/build
+/docs-sapper/export/
