--- a/docs-sapper/package.json
+++ b/docs-sapper/package.json
@@ -26,7 +26,9 @@
     "serve-static": "^1.13.2"
   },
   "devDependencies": {
+    "babel-loader": "^7.1.4",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "mini-css-extract-plugin": "^0.4.0",
     "mini-html-webpack-plugin": "^0.2.3",
     "npm-run-all": "^4.1.3",
@@ -40,9 +42,10 @@
     "postcss-url": "^7.3.2",
     "prismjs": "^1.14.0",
     "style-loader": "^0.21.0",
-    "stylelint-webpack-plugin": "^0.10.5",
     "svelte": "^2.8.0",
     "svelte-loader": "^2.9.0",
-    "webpack": "^4.14.0"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.14.0",
+    "webpack-merge": "^4.1.3"
   }
 }
