--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "delete:modules": "rm -rf \"node_modules\" \"./**/node_modules\"",
     "link:packages": "bolt ws exec --only-fs \"packages/**\" -- yarn link",
     "lint": "npm run lint:js",
-    "lint:js": "eslint \"*.js\" \"{tools,packages,website}/**/*.{js,html,svelte}\"",
+    "lint:js": "eslint \"*.js\" \"{tools,packages,docs-sapper}/**/*.{js,html,svelte}\"",
     "format": "npm run format:css; npm run format:js",
-    "format:js": "prettier --loglevel silent --write \"*.js\" \"{tools,packages,website}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages,website}/**/*.{js,html,svelte}\"",
-    "format:css": "prettier --loglevel silent --write \"packages/**/*.{css,pcss}\" && stylelint --fix \"packages/**/*.{css,pcss}\"",
+    "format:js": "prettier --loglevel silent --write \"*.js\" \"{tools,packages,docs-sapper}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages,docs-sapper}/**/*.{js,html,svelte}\"",
+    "format:css": "prettier --loglevel silent --write \"packages/**/*.{css,pcss}\"",
     "test": "bolt ws test"
   },
   "bolt": {
@@ -63,11 +63,14 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-prismjs": "^1.0.2",
+    "cheerio": "^1.0.0-rc.2",
     "cross-env": "^5.1.5",
     "css-loader": "^0.28.11",
     "eslint": "^5.0.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard": "^12.0.0-alpha.0",
     "eslint-plugin-html": "^4.0.3",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jest": "^21.15.1",
@@ -75,6 +78,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
+    "file-loader": "^1.1.11",
     "globby": "^8.0.1",
     "html-loader": "^0.5.5",
     "html-minifier": "^3.5.15",
@@ -125,16 +129,14 @@
     "rollup-plugin-virtual": "^1.0.1",
     "shelljs": "^0.8.2",
     "style-loader": "^0.21.0",
-    "stylelint": "^8.0.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-formatter-pretty": "^1.0.3",
-    "stylelint-webpack-plugin": "^0.10.5",
     "svelte": "^2.8.0",
     "svelte-extras": "^2.0.2",
     "svelte-loader": "^2.9.0",
     "svelte-preprocess": "^2.1.4",
     "svelte-routing": "^0.4.2",
+    "url-loader": "^1.0.1",
     "webpack": "^4.14.0",
+    "webpack-merge": "^4.1.3",
     "xml-js": "^1.6.3",
     "yargonaut": "^1.1.2",
     "yargs": "^11.0.0"
@@ -152,6 +154,8 @@
     "sapper": "^0.13.2",
     "serve-static": "^1.13.2",
     "sirv": "^0.1.2",
-    "source-code-pro": "^2.30.1"
+    "source-code-pro": "^2.30.1",
+    "stylelint": "^9.3.0",
+    "stylelint-config-standard": "^18.2.0"
   }
 }
