--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
+    "case": "^1.5.5",
     "cross-env": "^5.1.5",
     "eslint": "^5.0.0",
     "eslint-config-prettier": "^2.9.0",
