--- a/docs-sapper/assets/manifest.json
+++ b/docs-sapper/assets/manifest.json
@@ -7,14 +7,9 @@
 	"start_url": "/",
 	"icons": [
 		{
-			"src": "svelte-logo-192.png",
+			"src": "logo.svg",
 			"sizes": "192x192",
-			"type": "image/png"
-		},
-		{
-			"src": "svelte-logo-512.png",
-			"sizes": "512x512",
-			"type": "image/png"
+			"type": "image/svg"
 		}
 	]
 }
