--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-promise": "^4.0.0",
     "postcss-advanced-variables": "^2.3.3",
     "postcss-atroot": "^0.1.3",
+    "postcss-calc": "^6.0.1",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend-rule": "^2.0.0",
     "postcss-html": "^0.33.0",
