--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -13,15 +13,15 @@
     "webpack-cli": "^3.0.8"
   },
   "dependencies": {
-    "babel-loader": "^8.0.0-beta",
+    "babel-loader": "^8.0.0",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.0.5",
+    "cssnano": "^4.1.0",
     "eslint-loader": "^2.1.0",
     "file-loader": "^2.0.0",
-    "filemanager-webpack-plugin": "^2.0.1",
+    "filemanager-webpack-plugin": "^2.0.2",
     "html-minifier": "^3.5.20",
     "json-loader": "^0.5.7",
-    "mini-css-extract-plugin": "^0.4.1",
+    "mini-css-extract-plugin": "^0.4.2",
     "mini-html-webpack-plugin": "^0.2.3",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "pkg-dir": "^3.0.0",
@@ -29,15 +29,15 @@
     "progress-bar-webpack-plugin": "^1.11.0",
     "quickenv": "^0.0.6",
     "resolve-url-loader": "^2.3.0",
-    "style-loader": "^0.22.1",
-    "svelte-loader": "^2.10.1",
+    "style-loader": "^0.23.0",
+    "svelte-loader": "^2.11.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
-    "webpack": "^4.16.5",
+    "webpack": "^4.17.1",
     "webpack-archive-plugin": "^3.0.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
+    "webpack-dev-server": "^3.1.6",
     "webpack-merge": "^4.1.4",
     "webpack-sources": "^1.1.0",
     "xmlbuilder": "^10.0.0"
