--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mambasdk",
-  "version": "1.0.0-rc.5",
+  "name": "mamba-sdk",
+  "version": "1.0.0-rc.11",
   "description": "SDK for developing in the Mamba web environment",
   "repository": "https://github.com/stone-payments/pos-mamba-web.git",
   "author": "Stone Payments - Mamba Team",
@@ -51,7 +51,7 @@
   },
   "devDependencies": {
     "@gen/rollup-plugin-generate-html": "^0.1.1",
-    "@mamba/configs": "^1.0.0-rc.10",
+    "@mamba/configs": "^1.0.0-rc.11",
     "babel-jest": "^23.6.0",
     "case": "^1.5.5",
     "cross-env": "^5.2.0",
@@ -64,7 +64,7 @@
     "lerna-changelog": "^0.8.0",
     "lerna-wizard": "^1.0.9",
     "lint-staged": "^7.3.0",
-    "postcss": "^7.0.2",
+    "postcss": "^7.0.3",
     "prettier": "^1.14.3",
     "quickenv": "^0.0.6",
     "rollup": "^0.66.2",
@@ -76,7 +76,7 @@
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-serve": "^0.6.0",
-    "rollup-plugin-svelte": "^4.3.1",
+    "rollup-plugin-svelte": "^4.3.2",
     "rollup-plugin-virtual": "^1.0.1",
     "stylelint": "^9.5.0",
     "babel-core": "^6.26.3",
