--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@gen/rollup-plugin-generate-html": "^0.1.1",
     "@mamba/configs": "^1.0.0-rc.11",
+    "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
     "case": "^1.5.5",
     "cross-env": "^5.2.0",
@@ -68,6 +69,7 @@
     "prettier": "^1.14.3",
     "quickenv": "^0.0.6",
     "rollup": "^0.66.2",
+    "rollup-plugin-alias": "^1.4.0",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-copy": "^0.2.3",
@@ -79,7 +81,6 @@
     "rollup-plugin-svelte": "^4.3.2",
     "rollup-plugin-virtual": "^1.0.1",
     "stylelint": "^9.5.0",
-    "babel-core": "^6.26.3",
     "svelte": "^2.13.5",
     "svelte-preprocess": "^2.3.2"
   }
