--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint": "^5.7.0",
     "globby": "^8.0.1",
     "html-minifier": "^3.5.20",
+    "husky": "^1.1.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "lerna": "^3.4.3",
