--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -13,12 +13,12 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "npm run build:pos && npm run build:desktop",
-    "build:pos": "postcss ./pos.pcss -o ./dist/pos.css --verbose",
-    "build:desktop": "postcss ./desktop.pcss -o ./dist/desktop.css --verbose",
+    "build:pos": "postcss ./src/pos.pcss -o ./dist/pos.css --verbose",
+    "build:desktop": "postcss ./src/desktop.pcss -o ./dist/desktop.css --verbose",
     "postbuild": "ncp ./assets dist/assets",
     "start": "npm run start:pos",
-    "start:pos": "postcss ./pos.pcss -o ./dist/pos.css -w --verbose",
-    "start:desktop": "postcss ./desktop.pcss -o ./dist/desktop.css -w --verbose",
+    "start:pos": "postcss ./src/pos.pcss -o ./dist/pos.css -w --verbose",
+    "start:desktop": "postcss ./src/desktop.pcss -o ./dist/desktop.css -w --verbose",
     "prepublish": "npm run build"
   },
   "devDependencies": {
