--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,7 +4,8 @@
   "description": "Mamba CLI",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
-    "Christian Kaisermann <christian.kaisermann@stone.com.br>"
+    "Christian Kaisermann <christian.kaisermann@stone.com.br>",
+    "Pedro Gabriel <pedro.lancelloti@stone.com.br>"
   ],
   "license": "Apache-2.0",
   "publishConfig": {
