--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,25 +1,25 @@
 {
   "name": "@mamba/cli",
-  "version": "1.0.0-rc.24",
+  "version": "1.0.0-rc.25",
   "description": "Mamba CLI",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
-    "Christian Kaisermann <christian.kaisermann@stone.com.br>"
+    "Christian Kaisermann <christian.kaisermann@stone.com.br>",
+    "Pedro Gabriel <pedro.lancelloti@stone.com.br>"
   ],
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
   },
   "bin": {
-    "mamba": "src/cli.js"
+    "mamba": "./cli.js"
   },
-  "files": [
-    "src/"
-  ],
   "dependencies": {
     "case": "^1.5.5",
     "chalk": "^2.4.1",
     "cross-env": "^5.2.0",
+    "global-dirs": "^0.1.1",
+    "import-global": "^0.1.0",
     "inquirer": "^6.2.0",
     "quickenv": "^0.0.6",
     "yargonaut": "^1.1.4",
