--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "format:js": "prettier --write \"*.js\" \"{tools,packages}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
     "format:css": "prettier --write \"packages/**/*.{css,pcss}\" && stylelint --fix \"packages/**/*.{html,svelte,css,pcss}\"",
     "postinstall": "lerna bootstrap --hoist --no-ci",
-    "test": "jest --no-cache"
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "husky": {
     "hooks": {
