--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@babel/core": "^7.1.2",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
     "@mamba/configs": "file:packages/configs",
+    "@mamba/pos": "file:packages/pos",
+    "@mamba/switch": "file:packages/components/Switch",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "case": "^1.5.5",
