--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "format:css": "prettier --write \"packages/**/*.{css,pcss}\" && stylelint --fix \"packages/**/*.{html,svelte,css,pcss}\"",
     "postinstall": "lerna bootstrap --hoist --no-ci",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watch"
   },
   "husky": {
     "hooks": {
