--- a/package.json
+++ b/package.json
@@ -1,149 +1,96 @@
 {
-	"name": "mamba-sdk",
-	"description": "SDK for developing in the Mamba web environment",
-	"repository": "https://github.com/stone-payments/pos-mamba-web.git",
-	"author": "Stone Payments - Mamba Team",
-	"contributors": [
-		"Christian Kaisermann <christian.kaisermann@stone.com.br>",
-		"Pedro Lancelloti <pedro.lancelloti@stone.com.br>",
-		"Jaime Costa Marques <cmarques@stone.com.br>",
-		"Jackson Garcia <jackson.garcia@stone.com.br>"
-	],
-	"license": "Apache-2.0",
-	"engines": {
-		"node": ">= 8.10.0",
-		"npm": ">= 5.6.0"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"lint-staged": {
-		"linters": {
-			"*.{html,svelte}": [
-				"eslint --fix",
-				"stylelint --fix",
-				"git add"
-			],
-			"*.js": [
-				"prettier --write",
-				"eslint --fix",
-				"git add"
-			],
-			"*.{pcss,css}": [
-				"prettier --write",
-				"stylelint --fix",
-				"git add"
-			]
-		}
-	},
-	"devDependencies": {
-		"@babel/core": "^7.1.6",
-		"@gen/rollup-plugin-generate-html": "^0.1.1",
-		"@mamba/app": "file:packages/components/App",
-		"@mamba/configs": "file:packages/configs",
-		"@mamba/pos": "file:packages/pos",
-		"@mamba/switch": "file:packages/components/Switch",
-		"babel-core": "^7.0.0-bridge.0",
-		"babel-jest": "^23.6.0",
-		"case": "^1.6.0",
-		"cross-env": "^5.2.0",
-		"deasync": "^0.1.13",
-		"eslint": "^5.9.0",
-		"globby": "^8.0.1",
-		"html-minifier": "^3.5.21",
-		"husky": "^1.1.2",
-		"identity-obj-proxy": "^3.0.0",
-		"jest": "^23.6.0",
-		"jest-canvas-mock": "^1.1.0",
-		"lerna": "^3.4.3",
-		"lerna-wizard": "^1.0.9",
-		"lint-staged": "^8.0.4",
-		"postcss": "^7.0.5",
-		"prettier": "^1.14.3",
-		"quickenv": "^0.0.6",
-		"rollup": "^0.67.0",
-		"rollup-plugin-alias": "^1.4.0",
-		"rollup-plugin-babel": "^4.0.3",
-		"rollup-plugin-commonjs": "^9.2.0",
-		"rollup-plugin-copy": "^0.2.3",
-		"rollup-plugin-filesize": "^5.0.1",
-		"rollup-plugin-livereload": "^0.6.0",
-		"rollup-plugin-node-resolve": "^3.4.0",
-		"rollup-plugin-replace": "^2.1.0",
-		"rollup-plugin-serve": "^0.6.0",
-		"rollup-plugin-svelte": "^4.3.2",
-		"rollup-plugin-virtual": "^1.0.1",
-		"stylelint": "^9.7.1",
-		"svelte": "^2.15.1",
-		"svelte-preprocess": "^2.4.3"
-	},
-	"dependencies": {
-		"@babel/plugin-proposal-class-properties": "^7.1.0",
-		"@babel/plugin-syntax-dynamic-import": "^7.0.0",
-		"@babel/preset-env": "^7.1.6",
-		"@tivac/eslint-plugin-svelte": "^1.2.1",
-		"babel-eslint": "^10.0.1",
-		"babel-loader": "^8.0.4",
-		"chalk": "^2.4.1",
-		"css-loader": "^1.0.1",
-		"css-mqpacker": "^7.0.0",
-		"cssnano": "^4.1.7",
-		"eslint-config-airbnb-base": "^13.1.0",
-		"eslint-config-prettier": "^3.3.0",
-		"eslint-loader": "^2.1.1",
-		"eslint-plugin-html": "^5.0.0",
-		"eslint-plugin-import": "^2.14.0",
-		"eslint-plugin-jest": "^22.1.0",
-		"eslint-plugin-node": "^8.0.0",
-		"eslint-plugin-prettier": "^3.0.0",
-		"eslint-plugin-promise": "^4.0.1",
-		"file-loader": "^2.0.0",
-		"filemanager-webpack-plugin": "^2.0.5",
-		"global-dirs": "^0.1.1",
-		"import-global": "^0.1.0",
-		"inquirer": "^6.2.0",
-		"jsbarcode": "^3.11.0",
-		"json-loader": "^0.5.7",
-		"mini-css-extract-plugin": "^0.4.5",
-		"mini-html-webpack-plugin": "^0.2.3",
-		"ncp": "^2.0.0",
-		"optimize-css-assets-webpack-plugin": "^5.0.1",
-		"pkg-dir": "^3.0.0",
-		"postcss-advanced-variables": "^3.0.0",
-		"postcss-atroot": "^0.1.3",
-		"postcss-calc": "^7.0.1",
-		"postcss-cli": "^6.0.1",
-		"postcss-easy-import": "^3.0.0",
-		"postcss-extend-rule": "^2.0.0",
-		"postcss-html": "^0.34.0",
-		"postcss-loader": "^3.0.0",
-		"postcss-nested": "^4.1.0",
-		"postcss-preset-env": "^6.4.0",
-		"postcss-property-lookup": "^2.0.0",
-		"postcss-reporter": "^6.0.0",
-		"postcss-syntax": "^0.34.0",
-		"progress-bar-webpack-plugin": "^1.11.0",
-		"qrious": "^4.0.2",
-		"resolve-url-loader": "^3.0.0",
-		"rimraf": "^2.6.2",
-		"style-loader": "^0.23.1",
-		"stylelint-config-standard": "^18.2.0",
-		"svelte-extras": "^2.0.2",
-		"svelte-loader": "^2.11.0",
-		"uglifyjs-webpack-plugin": "^2.0.1",
-		"url-loader": "^1.1.2",
-		"webpack": "^4.18.0",
-		"webpack-archive-plugin": "^3.0.0",
-		"webpack-bundle-analyzer": "^3.0.3",
-		"webpack-cli": "^3.1.2",
-		"webpack-dev-server": "^3.1.10",
-		"webpack-merge": "^4.1.4",
-		"webpack-sources": "^1.3.0",
-		"webpack-virtual-modules": "^0.1.10",
-		"xmlbuilder": "^10.1.1",
-		"yargonaut": "^1.1.4",
-		"yargs": "^12.0.5"
-	}
+  "name": "mamba-sdk",
+  "description": "SDK for developing in the Mamba web environment",
+  "repository": "https://github.com/stone-payments/pos-mamba-sdk.git",
+  "author": "Stone Payments - Mamba Team",
+  "contributors": [
+    "Christian Kaisermann <christian.kaisermann@stone.com.br>",
+    "Pedro Lancelloti <pedro.lancelloti@stone.com.br>",
+    "Jaime Costa Marques <cmarques@stone.com.br>",
+    "Jackson Garcia <jackson.garcia@stone.com.br>",
+    "Vitor Paladini <vitor.paladini@stone.com.br>"
+  ],
+  "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 8.10.0",
+    "npm": ">= 5.6.0"
+  },
+  "scripts": {
+    "link:packages": "lerna exec npm link",
+    "lint": "npm run lint:css; npm run lint:js",
+    "lint:js": "eslint \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
+    "lint:css": "stylelint \"packages/**/*.{html,svelte,css,pcss}\"",
+    "format": "npm run format:css; npm run format:js",
+    "format:js": "prettier --write \"*.js\" \"{tools,packages}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
+    "format:css": "prettier --write \"packages/**/*.{css,pcss}\" && stylelint --fix \"packages/**/*.{html,svelte,css,pcss}\"",
+    "postinstall": "lerna bootstrap --hoist --no-ci",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --no-cache --verbose"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "linters": {
+      "*.{html,svelte}": [
+        "eslint --fix",
+        "stylelint --fix",
+        "git add"
+      ],
+      "*.js": [
+        "prettier --write",
+        "eslint --fix",
+        "git add"
+      ],
+      "*.{pcss,css}": [
+        "prettier --write",
+        "stylelint --fix",
+        "git add"
+      ]
+    }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@gen/rollup-plugin-generate-html": "^0.1.1",
+    "@mamba/configs": "file:packages/configs",
+    "@mamba/app": "file:packages/components/App",
+    "@mamba/pos": "file:packages/pos",
+    "@mamba/switch": "file:packages/components/Switch",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "case": "^1.5.5",
+    "cross-env": "^5.2.0",
+    "deasync": "^0.1.13",
+    "eslint": "^5.8.0",
+    "globby": "^8.0.1",
+    "html-minifier": "^3.5.21",
+    "husky": "^1.1.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^23.6.0",
+    "jest-canvas-mock": "^1.1.0",
+    "lerna": "^3.4.3",
+    "lerna-wizard": "^1.0.9",
+    "lint-staged": "^8.0.4",
+    "postcss": "^7.0.5",
+    "prettier": "^1.14.3",
+    "quickenv": "^0.0.6",
+    "rollup": "^0.67.0",
+    "rollup-plugin-alias": "^1.4.0",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-copy": "^0.2.3",
+    "rollup-plugin-filesize": "^5.0.1",
+    "rollup-plugin-livereload": "^0.6.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-serve": "^0.6.0",
+    "rollup-plugin-svelte": "^4.3.2",
+    "rollup-plugin-virtual": "^1.0.1",
+    "stylelint": "^9.7.1",
+    "svelte": "^2.15.1",
+    "svelte-preprocess": "^2.4.0"
+  }
 }
