--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@mamba/app": "^1.0.0-rc.29",
+    "@mamba/button": "^1.0.0-rc.29",
+    "@mamba/icon": "^1.0.0-rc.29",
     "@mamba/styles": "^1.0.0-rc.29",
     "@mamba/switch": "^1.0.0-rc.29"
   },
