--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -33,7 +33,6 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "pkg-dir": "^3.0.0",
     "postcss-loader": "^3.0.0",
-    "progress-bar-webpack-plugin": "^1.11.0",
     "quickenv": "^0.0.6",
     "resolve-url-loader": "^3.0.0",
     "style-loader": "^0.23.1",
@@ -48,6 +47,7 @@
     "webpack-merge": "^4.1.4",
     "webpack-sources": "^1.3.0",
     "webpack-virtual-modules": "^0.1.10",
+    "webpackbar": "^3.1.3",
     "xmlbuilder": "^10.1.1"
   },
   "gitHead": "91a8a4a8be4741a15249462cefda6e273f1613a3"
