--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mamba/configs",
   "version": "2.0.0",
-  "description": "Tool config presets for use in mamba projects.",
+  "description": "Tooling config presets to use in mamba projects.",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
     "Christian Kaisermann <christian.kaisermann@stone.com.br>"
@@ -46,7 +46,6 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "postcss-advanced-variables": "^3.0.0",
-    "postcss-atroot": "^0.1.3",
     "postcss-calc": "^7.0.1",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend-rule": "^2.0.0",
@@ -54,7 +53,6 @@
     "postcss-html": "^0.36.0",
     "postcss-nested": "^4.1.1",
     "postcss-preset-env": "^6.5.0",
-    "postcss-property-lookup": "^2.0.0",
     "postcss-reporter": "^6.0.1",
     "postcss-syntax": "^0.36.2",
     "quickenv": "^0.0.6",
