--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -56,6 +56,7 @@
     "postcss-reporter": "^6.0.1",
     "postcss-syntax": "^0.36.2",
     "quickenv": "^0.0.6",
+    "resolve": "^1.9.0",
     "stylelint-config-standard": "^18.2.0"
   },
   "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
