--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mamba/configs",
   "version": "2.0.0",
-  "description": "Tool config presets for use in mamba projects.",
+  "description": "Tooling config presets to use in mamba projects.",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
     "Christian Kaisermann <christian.kaisermann@stone.com.br>"
@@ -44,7 +44,6 @@
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "postcss-advanced-variables": "^3.0.0",
-    "postcss-atroot": "^0.1.3",
     "postcss-calc": "^7.0.1",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend-rule": "^2.0.0",
@@ -52,10 +51,10 @@
     "postcss-html": "^0.36.0",
     "postcss-nested": "^4.1.1",
     "postcss-preset-env": "^6.5.0",
-    "postcss-property-lookup": "^2.0.0",
     "postcss-reporter": "^6.0.1",
     "postcss-syntax": "^0.36.2",
     "quickenv": "^0.0.6",
+    "resolve": "^1.9.0",
     "stylelint-config-standard": "^18.2.0"
   },
   "gitHead": "7118f44e933d2f656166a80822c0b3c1001e6a33"
