--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
   "npmClient": "npm",
   "command": {
     "publish": {
-      "ignoreChanges": ["*.md", "*.json", "*.txt", "test/**", "package.json"],
+      "ignoreChanges": ["*.md", "*.txt", "test/**"],
       "message": "chore(release): publish"
     }
   },
