--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "link:packages": "lerna exec npm link",
     "changelog": "npx conventional-changelog-cli -p angular -i CHANGELOG.md -s"
   },
+  "config": {
+    "commitizen": {
+      "path": "git-cz"
+    }
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
