--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.2.1",
+  "version": "2.2.2",
   "npmClient": "npm",
   "command": {
     "publish": {
@@ -13,7 +13,9 @@
       "conventionalCommits": true
     }
   },
-  "npmClientArgs": ["--no-package-lock"],
+  "npmClientArgs": [
+    "--no-package-lock"
+  ],
   "packages": [
     "packages/cli",
     "packages/components/*",
