--- a/lerna.json
+++ b/lerna.json
@@ -9,13 +9,11 @@
         "LICENSE",
         "lerna.json"
       ],
-      "message": "chore(release): publish",
+      "message": "chore(release): :robot: publish",
       "conventionalCommits": true
     }
   },
-  "npmClientArgs": [
-    "--no-package-lock"
-  ],
+  "npmClientArgs": ["--no-package-lock"],
   "packages": [
     "packages/cli",
     "packages/components/*",
