--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,12 +2,5 @@
 # Each line is a file pattern followed by one or more owners.
 
 # These owners will be the default owners for everything in the repo.
-* pedro.souza@stone.com.br diego.martins@stone.com.br jonas.bezerra@stone.com.br jcmarques@stone.com.br
-
-# Order is important. The last matching pattern has the most precedence.
-# So if a pull request only touches javascript files, only these owners
-# will be requested to review.
-# *.js    @octocat @github/js
-
-# You can also use email addresses if you prefer.
-# docs/*  docs@example.com
+* @stone-payments/mamba-sdk
+* @stone-payments/mambasdk
